Use TicketManor logo in web confirmation page.

--- a/sourcecode/ex53serversolution/src/main/webapp/index.xhtml
+++ b/sourcecode/ex53serversolution/src/main/webapp/index.xhtml
@@ -5,12 +5,13 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>TicketManor: Customer Feedback (Ex53solution - MDB)</title>
+	<title>TicketManor: Customer Feedback (Ex53 - MDB)</title>
 </h:head>
 
 <h:body>
+	<img src="img/logo.png" width='200'/>
 	<p:panel>
-	<f:facet name="header">TicketManor: Customer Feedback (ex53solution - MDB)</f:facet>
+	<f:facet name="header">TicketManor: Customer Feedback (ex53 - MDB)</f:facet>
 	<p:dataTable var="comment" value="#{commentLister.list()}">
 
 		<p:column width="25%">
