A different logo than TicketMaster

--- a/sourcecode/ex101solution/src/main/webapp/thanks.xhtml
+++ b/sourcecode/ex101solution/src/main/webapp/thanks.xhtml
@@ -7,12 +7,12 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/standard.xhtml">
 
-<ui:define name="pageHeader">Acme Widgets Thank You (MicroService Demo)</ui:define>
+<ui:define name="pageHeader">AnyOtherCompany Thank You (MicroService Demo)</ui:define>
 
 <ui:define name="body">
-
+	<img src="img/buspartner-logo.png" height="200px"/>
 	<p:panel>
-	<f:facet name="header">Acme Widgets Thank You (MicroService Demo)</f:facet>
+	<f:facet name="header">AnyOtherCompany Thank You (MicroService Demo)</f:facet>
 
 		<h:outputText value="#{microService.greeting}" escape="false"/>
 		<br/>
