--- a/sourcecode/ex101solution/src/main/webapp/deployed.html
+++ b/sourcecode/ex101solution/src/main/webapp/deployed.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<img src="img/buspartner-logo.png" height="200px"/>
 <p>
 A plain HTML file to show that the webapp <b>is</b> deployed in this location.
 </p>
