--- a/sourcecode/ex101solution/src/main/webapp/index.xhtml
+++ b/sourcecode/ex101solution/src/main/webapp/index.xhtml
@@ -14,11 +14,12 @@
 
    		<ui:composition template="/templates/standard.xhtml">
 
-			<ui:define name="pageTitle">Acme Widgets Customer Feedback (MicroService Demo)</ui:define>
+			<ui:define name="pageTitle">AnyOtherCompany Customer Feedback (MicroService Demo)</ui:define>
   
-			<ui:define name="pageHeader">Acme Widgets Customer Feedback (MicroService Demo)</ui:define>
+			<ui:define name="pageHeader">AnyOtherCompany Customer Feedback (MicroService Demo)</ui:define>
 
 			<ui:define name="body">
+				<img src="img/buspartner-logo.png" height="200px"/>
 				<h:messages globalOnly='true' showSummary="true" showDetail="false" style="color: red; font-weight: bold;"/>
 				<h:form id="helloForm">
 					<h:panelGrid columns='3'>
