Sync some documents

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -450,6 +450,23 @@ first opened, because you haven&#8217;t yet written the code. These will go away
 </div>
 </div>
 <div class="sect1">
+<h2 id="_wildfly_server_logs">WildFly Server Logs</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The main log file is in c:\WILDFLY-DIR\standalone\log\server.log</p>
+</div>
+<div class="paragraph">
+<p>There is an icon to open this file on the desktop.</p>
+</div>
+<div class="paragraph">
+<p>There are also two batch files to help you view this log, np-log (notepad) and vi-log (vi editor).
+These will take a while to start as the log file is big.
+For Notepad, keyboard shortcuts CTRL/Home and CTRL/End are your friends for navigation.
+For vi, you just have to know what you&#8217;re doing :-).</p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_maven_deployment">Maven Deployment</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -580,20 +597,6 @@ numbers in the stack trace are affected. If not,
 the solution is to follow the steps "Cleaning Wildfly Configuration".</p>
 </div>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_wildfly_server">WildFly Server</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>The main log file is in c:\WILDFLY-DIR\standalone\log\server.log</p>
-</div>
-<div class="paragraph">
-<p>There are two batch files to help you view this log, np-log (notepad) and vi-log (vi editor).
-These will take a while to start as the log file is big.
-For Notepad, keyboard shortcuts CTRL/Home and CTRL/End are your friends for navigation.
-For vi, you just have to know what you&#8217;re doing :-).</p>
-</div>
 <div class="sect2">
 <h3 id="_restart_issues_with_wildfly">Restart Issues with Wildfly</h3>
 <div class="paragraph">
@@ -667,7 +670,7 @@ It&#8217;s pretty solid so you shouldn&#8217;t have to restart it during the wee
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-24 10:48:31 EST
+Last updated 2019-04-08 10:48:52 EDT
 </div>
 </div>
 </body>
