--- a/sourcecode/ex101solution/src/main/webapp/index.xhtml
+++ b/sourcecode/ex101solution/src/main/webapp/index.xhtml
@@ -19,7 +19,7 @@
 			<ui:define name="pageHeader">AnyOtherCompany Customer Feedback (MicroService Demo)</ui:define>
 
 			<ui:define name="body">
-				<img src="img/buspartner-logo.png" height="200px"/>
+				<img src="img/buspartner-logo.png" width="320" height="140px"/>
 				<h:messages globalOnly='true' showSummary="true" showDetail="false" style="color: red; font-weight: bold;"/>
 				<h:form id="helloForm">
 					<h:panelGrid columns='3'>
