--- a/sourcecode/ex101solution/src/main/webapp/thanks.xhtml
+++ b/sourcecode/ex101solution/src/main/webapp/thanks.xhtml
@@ -10,7 +10,7 @@
 <ui:define name="pageHeader">AnyOtherCompany Thank You (MicroService Demo)</ui:define>
 
 <ui:define name="body">
-	<img src="img/buspartner-logo.png" height="200px"/>
+	<img src="img/buspartner-logo.png" width="320" height="140px"/>
 	<p:panel>
 	<f:facet name="header">AnyOtherCompany Thank You (MicroService Demo)</f:facet>
 
