Add link for 10.1

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<li>Exercise 7.1 - Use PostMan application</li>
 		<li><a href='http://localhost:8080/ex81/admin'>Exercise 8.1</a> (ex81 /admin Security)</li>
 		<li><a href='http://localhost:8080/clublist'>Exercise 9.1</a> (ClubList - assuming default naming)</li>
+		<li><a href='http://localhost:8000/index.jsf'>Exercise 10.1</a> (MicroService)</li>
 		</ul>
 	</div>
 </div>
