--- a/README.html
+++ b/README.html
@@ -487,7 +487,7 @@ installed and on your PATH.</p>
 you could use a different App Server but you&#8217;d have to change
 all the Maven deployment configurations (most projects have
 GlassFish and Tomcat in <em>pom.xml</em>, but this is unmaintained!!)
-AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how to do this).</p>
+AND the DataSource and any other configurations in <em>configs/wildfly</em> (alas, the EE spec doesn&#8217;t nail down how to do this).</p>
 </li>
 <li>
 <p>MS-Windows users must also install Cygwin 64 bit (includes shells and vi), including:</p>
@@ -751,7 +751,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-11-27 23:35:13 EST
+Last updated 2019-04-23 15:41:42 EDT
 </div>
 </div>
 </body>
