--- a/sourcecode/ex101solution/src/main/webapp/index.xhtml
+++ b/sourcecode/ex101solution/src/main/webapp/index.xhtml
@@ -49,7 +49,7 @@
 					<h:outputText value=""/>
 					<h:commandButton id="submit"
 						action="#{microService.submit}" 
-						value="Sign Up">
+						value="Submit Feedback">
 					</h:commandButton>
 					</h:panelGrid>
 				</h:form>
