--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.2: Jenkins</a></li>
+		<li><a href='http://localhost:8080/ex53'>Exercise 5.3 - View after sending</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/BlogList.web'>DoNow 6.1 (Blog)</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 6.2 (jsfdemo)</a></li>
-		<li><a href='http://localhost:8080/ex53'>Exercise 5.3 View after sending</a></li>
 		<li><a href='http://localhost:8080/ex61'>Exercise 6.1</a></li>
 		<li>Exercise 7.1 - Use PostMan application</li>
 		<li><a href='http://localhost:8080/ex81/admin'>Exercise 8.1</a> (ex81 /admin Security)</li>
