Note that ch 3, 4 have no web

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.2: Jenkins</a></li>
+		<li>(Chapters 3 & 4 use EJBs, no web components)</li>
 		<li><a href='http://localhost:8080/ex53'>Exercise 5.3 - View after sending</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/BlogList.web'>DoNow 6.1 (Blog)</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 6.2 (jsfdemo)</a></li>
